added sign up form

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,10 @@
     <link rel="icon" type="image/x-icon" href="static/images/webtitle.ico">
 </head>
 <body>
-    <div class="header">
-        <h1>Real chat Group</h1>
-    </div>
     <div class="container">
-        <form action="action_page.php" method="post">
+        <form action="/home" method="post">
             <div class="imgcontainer">
-              <img src="img_avatar2.png" alt="Avatar" class="avatar">
+              <img src="static/images/webtitle.ico" alt="Sabko Kitab" class="avatar">
             </div>
           
             <div class="container">
@@ -32,7 +29,7 @@
             </div>
           
             <div class="container" style="background-color:#f1f1f1">
-              <button type="button" class="cancelbtn">Cancel</button>
+              <button type="button" class="signup">Sign Up</button>
               <span class="psw">Forgot <a href="#">password?</a></span>
             </div>
           </form>
