--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,8 @@
+/* Used template from W3schools */
 /* Bordered form */
 form {
     border: 3px solid #f1f1f1;
+    flex: auto;
   }
   
   /* Full-width inputs */
@@ -30,10 +32,11 @@ form {
   }
   
   /* Extra style for the cancel button (red) */
-  .cancelbtn {
+  .signup {
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
+    border-radius: 30%;
+    background-color: #3a5bf0cb;
   }
   
   /* Center the avatar image inside this container */
@@ -44,7 +47,8 @@ form {
   
   /* Avatar image */
   img.avatar {
-    width: 40%;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
   }
   
@@ -65,7 +69,7 @@ form {
       display: block;
       float: none;
     }
-    .cancelbtn {
+    .signup {
       width: 100%;
     }
   }
