--- a/templates/login.html
+++ b/templates/login.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <form action="/home" method="post">
+        <form action="/login" method="post">
             <div class="imgcontainer">
               <img src="static/images/webtitle.ico" alt="Sabko Kitab" class="avatar">
             </div>
           
             <div class="container">
               <label for="uname"><b>Username</b></label>
-              <input type="text" placeholder="Enter Username" name="uname" required>
+              <input type="text" placeholder="Enter Username" name="username" required>
           
               <label for="psw"><b>Password</b></label>
-              <input type="password" placeholder="Enter Password" name="psw" required>
+              <input type="password" placeholder="Enter Password" name="password" required>
           
               <button type="submit">Login</button>
               <label>
