--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real chat</title>
+    <title>Sign Up | Sabko Kitab</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/images/webtitle.ico">
 </head>
 <body>
-    <form action="action_page.php" style="border:1px solid #ccc">
+    <form action="" style="border:1px solid #ccc">
         <div class="container">
           <h1>Sign Up</h1>
           <p>Please fill in this form to create an account.</p>
