--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,9 +17,18 @@
       
           <label for="email"><b>Email</b></label>
           <input type="text" placeholder="Enter Email" name="email" required>
+
+          <label for="firstname"><b>Email</b></label>
+          <input type="text" placeholder="Enter First Name" name="firstname" required>
+
+          <label for="lastname"><b>Username</b></label>
+          <input type="text" placeholder="Enter Last Name" name="lastname" required>
+
+          <label for="username"><b>Username</b></label>
+          <input type="text" placeholder="Enter Username" name="username" required>
       
           <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
+          <input type="password" placeholder="Enter Password" name="password" required>
       
           <label for="psw-repeat"><b>Repeat Password</b></label>
           <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
