--- a/templates/login.html
+++ b/templates/login.html
@@ -26,11 +26,12 @@
               <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
               </label>
+              <span class="psw">Forgot <a href="#">password?</a></span>
             </div>
           
             <div class="container" style="background-color:#f1f1f1">
-              <button type="button" class="signup">Sign Up</button>
-              <span class="psw">Forgot <a href="#">password?</a></span>
+              <a href="templates/signup.html"><button type="button" class="signup">Sign Up</button></a>
+              
             </div>
           </form>
     </div>
