--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <a href="/authenticate"><button type="button" class="signup">Sign Up</button></a>
+        <a href="/signup"><button type="button" class="signup">Sign Up</button></a>
 
       </div>
     </form>
