--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,19 +7,23 @@
 {% block bodyContent %}
 <div class="center-block">
 <form action="/register" method="post">
+  <div class="imgcontainer">
+    <img src="{{url_for('static', filename='images/webtitle.ico')}}" alt="Sabko Kitab" class="avatar">
+  </div>
   <div class="container">
     <div>
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
   </div>
+  <div>
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
 
-    <label for="firstname"><b>Email</b></label>
+    <label for="firstname"><b>First Name</b></label>
     <input type="text" placeholder="Enter First Name" name="firstname" required>
 
-    <label for="lastname"><b>Username</b></label>
+    <label for="lastname"><b>Last Name</b></label>
     <input type="text" placeholder="Enter Last Name" name="lastname" required>
 
     <label for="username"><b>Username</b></label>
@@ -34,11 +38,11 @@
     <label>
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
     </label>
+  </div>
 
-    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+    <p>By creating an account you agree to our <a href="/termsAndPrivacy" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
     <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
       <button type="submit" class="signupbtn">Sign Up</button>
     </div>
   </div>
