--- a/announceme/templates/groups.html
+++ b/announceme/templates/groups.html
@@ -1,48 +1,50 @@
 {% extends "layout.html" %}
 
 {% block title %}
-     Groups
+Groups
 {% endblock %}
 
 {% block main %}
 
 <div class="alert alert-success box0" role="alert">
-  <h3>Your Groups,</h3>
-<div class="alert alert-success" role="alert">
-<table>
-    {% for group in groups  %}
+    <h3>Your Groups,</h3>
+    <div class="alert alert-success" role="alert">
+        <table>
+            {% for group in groups %}
 
-        <tr>
-            <td>
-                <form action="/group" method="post">
-                   <input name="groupId" type="hidden" value="{{group.groupId}}">
-                   <input class="btn btn-primary" type="submit" value="{{group.groupName}}" id="search">
-                </form>
-            </td>
-        </tr>
-    {% endfor %}
-</table>
+            <tr>
+                <td>
+                    <form action="/group" method="post">
+                        <input name="groupId" type="hidden" value="{{group[1]}}">
+                        <input class="btn btn-primary" type="submit" value="{{group[0]}}" id="search">
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </div>
-</div>
 
 
 
-    <form action="/group" method="post">
+<form action="/group" method="post">
 
 
-        <div class="alert alert-warning box1" >
-            <input autocomplete="off" autofocus class="form-control" name="groupName" placeholder="Name of group...." type="text" style="width:300px;">
+    <div class="alert alert-warning box1">
+        <input autocomplete="off" autofocus class="form-control" name="groupName" placeholder="Name of group...."
+            type="text" style="width:300px;">
 
-        <button class="btn btn-primary"  type="submit">Create group</button>
-        </div>
+        <button class="btn btn-primary" type="submit">Create group</button>
+    </div>
 
 
-        <div class="alert alert-info box2" >
-            <input autocomplete="off" autofocus class="form-control" name="groupToJoin" placeholder="Name of group...." type="text" style="width:300px;">
+    <div class="alert alert-info box2">
+        <input autocomplete="off" autofocus class="form-control" name="groupToJoin" placeholder="Name of group...."
+            type="text" style="width:300px;">
 
-        <button class="btn btn-primary"  type="submit">Join group</button>
-        </div>
-    </form>
+        <button class="btn btn-primary" type="submit">Join group</button>
+    </div>
+</form>
 
 
 {% endblock %}
