Table creation done and fixing UI

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,3 +37,7 @@
   </div>
 </div>
 {%endblock bodyContent%}
+<div class="footer">
+  <span class="ticker">Copyright © 2023</span>
+<span class="ticker">Real Group Forum</span>
+</div>
