--- a/templates/terms_privacy.html
+++ b/templates/terms_privacy.html
@@ -46,5 +46,10 @@ We are committed to protecting your privacy. This privacy policy explains how we
     We may update this privacy policy from time to time. If we make material changes to the policy, we will notify you by email or by posting a notice on the web application.</li>
 </ul>
 If you have any questions about our terms of use or privacy policy, please contact us at @realsanjeev2.
+
 </div>
+<div class="footer">
+    <span class="ticker">Copyright © 2023</span>
+  <span class="ticker">Real Group Forum</span>
+  </div>
 {%endblock bodyContent%}
