--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,28 @@
 body {
-  background: linear-gradient(to bottom, #0074D9, #2ECC40);
-
+  background: rgb(238,174,202);
+  background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endColorstr="#94bbe9",GradientType=1);
 }
+.footer{
+  background-color: #111;
+  z-index: 20;
+  width: 100%;
+  padding: 10px;
+  bottom: 0px;
+  text-align: center;
+}
+
+.footer .ticker{
+  text-align: center;
+ padding: 5px 10px;
+ color: #111;
+ position: relative;
+ font-size: 16px;
+ background-color: #15ff00;
+}
+
 
 .center-block {
   position: absolute;
@@ -18,7 +39,8 @@ form {
 
 /* Full-width inputs */
 input[type=text],
-input[type=password] {
+input[type=password],
+input[type=date]{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -67,6 +89,7 @@ img.avatar {
 .psw {
   display: block;
 }
+
 .container {
   display: flex;
   flex-wrap: wrap;
