--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,30 +17,52 @@
     <hr>
   </div>
   <div>
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
 
     <label for="firstname"><b>First Name</b></label>
     <input type="text" placeholder="Enter First Name" name="firstname" required>
 
+    <label for="middlename"><b>Middle Name</b></label>
+    <input type="text" placeholder="Enter Middle Name" name="middlename">
+
     <label for="lastname"><b>Last Name</b></label>
     <input type="text" placeholder="Enter Last Name" name="lastname" required>
+
+    <label for="gender"><b>Gender</b></label>
+<div>
+  <input type="radio" id="male" name="gender" value="male" required>
+  <label for="male">Male</label>
+</div>
+<div>
+  <input type="radio" id="female" name="gender" value="female" required>
+  <label for="female">Female</label>
+</div>
+<div>
+  <input type="radio" id="other" name="gender" value="other" required>
+  <label for="other">Other</label>
+</div>
+
+
+    <label for="dob"><b>Date of Birth</b></label>
+    <input type="date" placeholder="YYYY-MM-DD" name="dob" required>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" required>
 
     <label for="username"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="username" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="password" required>
+    <input type="password" placeholder="Enter Password" name="password" required minlength="8">
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required minlength="8">
 
     <label>
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
     </label>
   </div>
 
-    <p>By creating an account you agree to our <a href="/termsAndPrivacy" style="color:dodgerblue">Terms & Privacy</a>.</p>
+    <p>By creating an account you agree to our <a href="/terms-and-conditions" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
     <div class="clearfix">
       <button type="submit" class="signupbtn">Sign Up</button>
@@ -48,4 +70,5 @@
   </div>
 </form>
 </div>
+
 {% endblock %}
