--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real chat {% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='images/webtitle.ico')}}">
 </head>
 
