--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,7 +20,7 @@
         <div class="profile-card">
             <div>{{user["email"]}}</div>
             <div>DOB: {{user["dob"]}}</div>
-            <div>Gender: {{user["dob"]}}</div>
+            <div>Gender: {{user["gender"]}}</div>
             <div>
             </div>
 </main>
