--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -11,17 +11,17 @@ Group Dashboard
     </h1>
 </div>
 
-
 <div style="display: flex;">
-        <div style="flex: 1;">
-            <form action="#" method="POST" style="padding: 10px;">
-                <label for="create-post">Create Post</label>
-                <div class="create-post" >
-                    <textarea dir="ltr" id="mytext" rows="5" name="mypost" placeholder="Write your idea.....">
-                    </textarea><br />
-                    <input type="submit" value="Post">
-                    </div>
-            </form>
+    <div style="flex: 1;">
+        <form action="#" method="POST" style="padding: 10px;">
+            <label for="create-post">Create Post</label>
+            <div class="create-post">
+                <textarea id="create-post" rows="5" name="create-post" placeholder="Write your idea.....">
+                    </textarea>
+                <br />
+                <input type="submit" value="Post">
+            </div>
+        </form>
     </div>
 </div>
 {% endblock %}
