Adding create post function

--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -7,7 +7,7 @@ Group Dashboard
 <div>
     <h1 style="background-color: #f00; text-align: center; margin-top: 0px; 
                padding: 0px; font-size: 36px; font-weight: bold;">
-        Group: {{ group_name.upper() }}
+        Group: {{ forum["group_name"].upper() }}
     </h1>
 </div>
 
