--- a/static/css/main.css
+++ b/static/css/main.css
@@ -277,3 +277,84 @@ input[type="submit"] {
   border-radius: 0px;
   font-family: 'cairo', serif;
 }
+
+/* posts box */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+
+
+.card {
+  height: 500px;
+  width: 380px;
+  background-color: white;
+  position: relative;
+  z-index: 1;
+}
+
+
+h2 {
+  padding: 22px 22px 0;
+}
+
+p {
+  font-size: 18px;
+  padding: 0 22px;
+  line-height: 24px;
+}
+
+.intro {
+  width: 85%;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+  color: #;
+}
+
+a:hover {
+  color: orange;
+  transition: .3s;
+}
+
+.author {
+ display: flex;
+ align-items: center;
+}
+
+.profile {
+  background-image: url(https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png);
+  background-size: cover;
+  background-position: center;
+  height: 36px;
+  width: 36px;
+  border-radius: 50%;
+  margin: 10px 0 10px 22px;
+}
+
+.name {
+  padding-left: 10px;
+  cursor: pointer;
+  font-weight: 300;
+}
+
+.name a {
+  font-weight: 400;
+  color: orange;
+}
+
+.info {
+  display: flex;
+  color: #999;
+  font-size: 14px;
+  margin-top: 8px;
+  padding-left: 0;
+}
+
+.info a { cursor: pointer; }
+
+ion-icon {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  padding: 10px 8px 0 22px;
+}
