adding sql_info readme

--- a/templates/login.html
+++ b/templates/login.html
@@ -36,4 +36,7 @@
     </form>
   </div>
 </div>
+<div class="center-block">
+  <div id="message">{{ message }}</div>
+</div>
 {%endblock bodyContent%}
