--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
 {% block title %}
 : Login
@@ -39,4 +39,4 @@
 <div class="center-block">
   <div id="message">{{ message }}</div>
 </div>
-{%endblock bodyContent%}
+{% endblock %}
