--- a/templates/sorry.html
+++ b/templates/sorry.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
 {% block title %}
 : Sorry
@@ -8,4 +8,4 @@
 <div class="center-block">
     <div id="message">{{ message }}</div>
 </div>
-{%endblock bodyContent%}
+{% endblock %}
