--- a/templates/index_layout.html
+++ b/templates/index_layout.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}
-    {% endblock %}: Real Forum</title>
+  <title>{% block title %}{% endblock %}: Real Forum</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{{url_for(" static", filename="css/main.css" )}}">
-  <link rel="icon" type="image/x-icon" href="{{url_for(" static", filename="images/webtitle.ico" )}}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/webtitle.ico') }}">
 </head>
 
 <body>
@@ -26,7 +25,7 @@
       <li class="nav-link auth"><a href="/logout">Log Out</a></li>
     </ul>
   </nav>
-  <script src="{{url_for('static', filename='js/main.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   {% block index_layout %}
   {% endblock %}
 </body>
